fix fading/sliding jumps

--- a/less/custom.less
+++ b/less/custom.less
@@ -25,6 +25,11 @@ body{
 	min-height: 40px;
 	box-shadow: 0px 0px 70px -30px black;
 }
+
+.page-header{
+	margin-top: 0px;
+	margin-bottom: 18px;
+}
 .carousel.project-carousel{
 
 	.carousel-action-buttons{
